--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>osu!classic</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="script.js"></script>
+  <script src="stars.js"></script>
 </head>
 <body>
     <body>
@@ -52,7 +53,7 @@
       </div>
     </div>   
     <div class="logo-container">
-        <img src="menu-copyright@2x.png">
+        <img src="resources/main-ui/menu-copyright@2x.png">
       </div>
       <div class="options-container">
         <div  class="option-users">
@@ -61,6 +62,6 @@
 
         </div>
       </div>
-      
+      <canvas id="canvas"></canvas>      
 </body>
 </html>
