--- a/options/index.html
+++ b/options/index.html
@@ -9,6 +9,7 @@
   <script src="../fadeinloader.js"></script>
 </head>
 <body onload="fadeInLoader()">
+  <div class="overlay"></div>
   <div id="loader"></div>
   <div class="topnav">
     <div class="container">
